--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="container">
-        <div id="start">Start Quiz!</div>
+        <div id="start">PETRICHOR.</div>
         <div id="quiz" style="display: none">
             <div><span id="time">00:30</span></div>
             <div id="question"></div>
